# kolibri-cyd-evaluation-apps

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml
.cargo/: config.toml
app/: Cargo.toml  rustfmt.toml
app/src/: debouncer.rs
embedded-graphics-profiler-display/: Cargo.toml
embedded-graphics-profiler-display/src/: lib.rs
embedded-graphics-profiler-display/src/profiler/: mod.rs
lvgl-based/: Cargo.toml  sdkconfig.defaults  tree.text
lvgl-based/.cargo/: config.toml
lvgl-based/lvgl-configs/: lv_conf.h
lvgl-based/src/: main.rs
slint-based/: Cargo.toml  LICENSE  build.rs
slint-based/.cargo/: config.toml
slint-based/src/: cyd.rs  lib.rs
slint-based/ui/: app-window.slint  lights-app.slint  microwave-ui.slint  timer-app.slint
src/: lib.rs
