[package]
name         = "kolibri-cyd-tester-app-embassy"
version      = "0.1.0"
edition      = "2021"
rust-version = "1.76.0"

[[bin]]
name = "firmware"
path = "src/bin/firmware.rs"

[[bin]]
name = "kolibri-timer"

[[bin]]
name = "xpt"
path = "src/bin/xpt.rs"

[[bin]]
name = "calibrate"
path = "src/bin/calibrate.rs"

[lib]

[dependencies]
bit_field = "0.10.2"
display-interface = "0.5.0"
display-interface-spi = "0.5.0"
embassy-embedded-hal = "0.2.0"
# defmt            = "0.3.8"
# defmt-rtt        = "0.4.1"
embassy-executor = { version = "0.6.0",  features = ["log"] }
embassy-sync = "0.6.0"
embassy-time     = { version = "0.3.1",  features = ["generic-queue-8"] }
embedded-graphics = "0.8.1"
embedded-graphics-profiler-display = { version = "0.1.0", path = "../embedded-graphics-profiler-display" }
embedded-hal = "1.0.0"
embedded-sdmmc = "0.8.0"
esp-backtrace    = { version = "0.14.1", features = ["esp32", "println", "exception-handler", "panic-handler"] }
esp-hal          = { version = "0.20.1", features = ["esp32", "log", "async"] }
esp-hal-embassy  = { version = "0.3.0",  features = ["esp32", "log"] }
esp-println = { version = "0.11.0", features = ["esp32", "log"] }
format_no_std = "1.2.0"
heapless = { version = "0.8.0", features = ["serde"] }
kolibri-embedded-gui = { git = "https://github.com/Yandrik/kolibri.git", version = "0.0.0-alpha.1", branch = "optimizations" }
mipidsi = "0.8.0"
profont = "0.7.0"
static_cell      = { version = "2.1.0",  features = ["nightly"] }
ufmt = "0.2.0"
xpt2046 = { git = "https://github.com/Yandrik/xpt2046.git", version = "0.3.1" }

