[workspace]

[package]
name         = "rust-m5stack-lvgl-demo"
version      = "0.1.0"
authors      = ["enelson1001 <ednelson5080@gmail>"]
edition      = "2021"
resolver     = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug     = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[[bin]]
name = "starter"

[[bin]]
name = "timer"

[features]
default = ["embassy", "esp-idf-svc/native", "std"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log         = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49.1", default-features = false }

esp-idf-hal = { version = "0.44.1" }
esp-idf-sys = { version = "0.35.0" }

cstr_core              = "0.2.1"
embedded-graphics-core = "0.4.0"

lvgl = { version = "0.6.2", default-features = false, features = [
    "embedded_graphics",
    "unsafe_no_autoinit",
] }

lvgl-sys = { version = "0.6.2" }

display-interface-spi = "0.5.0"
mipidsi               = "0.8.0"
static_cell = "2.1.0"

xpt2046 = { git = "https://github.com/Yandrik/xpt2046.git", version = "0.3.1" }

embedded-graphics-profiler-display = { version = "0.1.0", path = "../embedded-graphics-profiler-display", features = ["std"] }




[build-dependencies]
embuild = "0.32.0"

[patch.crates-io]
lvgl     = { git = "https://github.com/enelson1001/lv_binding_rust" }
lvgl-sys = { git = "https://github.com/enelson1001/lv_binding_rust" }
