[workspace]

[package]
name = "slint-mcu-rust-template"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# [[bin]]
# name = "main"

[[bin]]
name = "starter"

[dependencies]
slint = { version = "1.8", default-features = false, features = ["compat-1-2", "renderer-software", "libm", "unsafe-single-threaded"] }

embassy-embedded-hal = "0.2.0"
embassy-executor = { version = "0.6.0", features = ["log"] }
embassy-sync = "0.6.0"
embassy-time = { version = "0.3.1", features = ["generic-queue-8"] }

esp-hal = { version = "0.20.1", features = ["async", "esp32", "log"] }
esp-hal-embassy = { version = "0.3.0", features = ["esp32", "log"] }
esp-println = { version = "0.12.0", features = ["esp32", "log"] }

cortex-m = { version = "0.7.6" }
cortex-m-rt = { version = "0.7.1" }
embedded-alloc = { version = "0.6.0" }
shared-bus = { version = "0.3.1" }
panic-halt = { version = "1.0.0" }
display-interface-spi = { version = "0.5.0" }
mipidsi = "0.8.0"
embedded-graphics-core = { version = "0.4.0" }
embedded-hal = { version = "1.0.0" }
fugit = { version = "0.3.6" }
esp-alloc = "0.5.0"
embedded-graphics-profiler-display = { version = "0.1.0", path = "../embedded-graphics-profiler-display" }
xpt2046 = { git = "https://github.com/Yandrik/xpt2046.git", version = "0.3.1" }


esp-backtrace = { version = "0.14.2", features = ["esp32", "println"] }

static_cell = { version = "2.1.0", features = ["nightly"] }
embedded-hal-bus = "0.2.0"

[build-dependencies]
slint-build = { version = "1.8" }


[features]
simulator = ["slint/backend-winit"]
# pico = [
#     "slint/unsafe-single-threaded",
#     "slint/libm",
#     "cortex-m",
#     "cortex-m-rt",
#     "embedded-alloc",
#     "embedded-hal",
#     "fugit",
#     "display-interface-spi",
#     "embedded-graphics-core",
#     "shared-bus",
#     "panic-halt"
# ]

